# Deep_Research2.0

./: .env.example  .gitignore  DESIGN_AND_PLAN.md  README.md  SETUP.md  langgraph.json  pyproject.toml
plans/: increment_0_design_overview.md  increment_10_web_ui.md  increment_1_minimal_e2e.md  increment_2_reflection_loop.md  increment_3_coordinator.md  increment_3_supervisor.md  increment_4_question_stage.md  increment_5_citations.md  increment_6_final_report.md  increment_7_research_quality.md  increment_8_provider_and_progress.md  increment_9_testing_fixes.md
scripts/: compare_brave.py  compare_serper.py  run.py  test_provider_swap.py
src/deep_research/: __init__.py  configuration.py  logging_config.py  models.py  prompts.py  state.py
src/deep_research/graph/: __init__.py  graph.py  model.py
src/deep_research/helpers/: errors.py  source_store.py
src/deep_research/nodes/: __init__.py  brief.py  clarify.py  compress.py  reflect.py  report.py  researcher.py
src/deep_research/nodes/coordinator/: __init__.py  coordinator.py  reflect.py  tools.py
src/deep_research/nodes/researcher/: __init__.py  adapter.py  reflect.py  researcher.py  summarizer.py
src/deep_research/nodes/supervisor/: __init__.py  tools.py  (+2 more)
src/deep_research/tools/: __init__.py  registry.py
tests/: test_brave_search.py  test_contradiction_overwrite.py  test_integration.py  test_model_config.py  test_nodes.py  test_search.py  test_serper_search.py  test_source_store.py
web/: api.py  dev.py  event_mapper.py
web/frontend/: package-lock.json
web/frontend/src/: App.tsx  index.css  types.ts
(+10 files in other folders)
